syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message EmptyMessageRequest {}

message CreateOrderRequest {
  string id = 1;
  double price = 2;
  double tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message Order {
  string id = 1;
  double price = 2;
  double tax = 3;
  double final_price = 4;
}

message OrderListResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(EmptyMessageRequest) returns (OrderListResponse);
}
